# RenderFlow

./: .gitignore  CMakeLists.txt  Effect.escript  Flow.escript  MyFlow.escript  Plugin.escript  PythonFlow.escript  PythonMyFlow.escript  PythonPrerenderFlow.escript  PythonTensorflow.py  PythonUpscaleFlow.escript  Screenshot.escript  Test.py  UpscaleFlow.escript  readme.md
flows/: InstantNGP.escript  InstantNGP.py  InstantNGP_default_transforms.json  MyFlow.escript  MyFlow.py  Nerf.escript  Nerf.py  Prerender.py  PrerenderTest.py  PythonFlow.escript  PythonMyFlow.escript  PythonPrerenderFlow.escript  PythonSimpleFlow.escript  PythonUpscaleFlow.escript  ShowNerf.escript  ShowNerf.py  Simple.py  SimpleFlow.escript  Test.py  TinyNerf.escript  TinyNerf.py  UpscaleFlow.escript  Upscaling.py  _Nerf.py  instant-ngp.escript  instant-ngp.py
flows/factory_model_15000/: saved_model.pb
flows/factory_model_15000/variables/: variables.data-00000-of-00001  variables.index
flows/testModel/variables/: variables.index
flows/tinyDrumsModel/: fingerprint.pb  saved_model.pb
flows/tinyDrumsModel/variables/: variables.data-00000-of-00001  variables.index
flows/tinyExcavatorModel/: keras_metadata.pb
flows/tinyExcavatorModel/variables/: variables.data-00000-of-00001  variables.index
flows/tinyNerf/: fingerprint.pb  saved_model.pb
flows/tinyPADrendModel/: keras_metadata.pb  saved_model.pb
flows/tinyPADrendModel/variables/: variables.data-00000-of-00001
flows/upscaleModel/saved/: saved_model.pb
importDataset/: drums.npz  import.ipynb  import.py  tiny_nerf.ipynb
pythonScripts/: Test.py  Upscaling.py  Upscaling2.py
src/: ELibRenderFlow.cpp  ELibRenderFlow.h  E_PythonModule.cpp  E_PythonModule.h  Main.cpp  PythonModule.cpp  PythonModule.h  PythonRender.cpp  PythonRender.h  PythonTest.cpp  PythonTest.h
upscaleModel/: convertToSavedModel.py  model.pb
